# raytracer

./: .gitignore  CMakeLists.txt
src/: Tuple.cpp  Tuple.hpp  utils.hpp
test/: CMakeLists.txt  tests.cpp
